gphoto2 (2.4.5-1) unstable; urgency=low

  * New upstream release (Closes: #483807).
  * Adopt the package within pkg-phototools:
     - Set the Maintainer to the group.
     - Add Frederic Peters and myself as Uploaders.
     - Add Vcs-{Git,Browser} fields accordingly.
  * Add a Homepage field.
  * Add a watch file to monitor new upstream releases.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 11 Apr 2009 02:18:11 +0200

gphoto2 (2.4.0-1) unstable; urgency=low

  * New upstream release.
    * fixed --delete-file parameter name in manpage (closes: #345689)
  * debian/control{,.in}: removed control.in generation via sed, using
    not+linux-gnu from typehandling instead.
  * moved all patches to dpatch handling.
  * debian/patches/10_getenv_home_copying.dpatch: applied upstream.

 -- Frederic Peters <fpeters@debian.org>  Sun, 30 Sep 2007 13:24:30 +0200

gphoto2 (2.3.1-5) unstable; urgency=low

  * debian/rules: don't run make clean when Makefile is missing.

 -- Frederic Peters <fpeters@debian.org>  Sat, 21 Jul 2007 12:46:04 +0200

gphoto2 (2.3.1-4) unstable; urgency=low

  * debian/patches/10_getenv_home_copying.dpatch: updated as applied by
    upstream.
  * debian/rules: don't ignore make clean potential errors

 -- Frederic Peters <fpeters@debian.org>  Sat, 21 Jul 2007 12:42:43 +0200

gphoto2 (2.3.1-3) unstable; urgency=low

  * debian/rules: added dpatch support
  * debian/patches/10_getenv_home_copying.dpatch: don't copy more characters
    from $HOME than possible in buffer (closes: #433794)

 -- Frederic Peters <fpeters@debian.org>  Thu, 19 Jul 2007 15:46:54 +0200

gphoto2 (2.3.1-2) unstable; urgency=low

  * Upload to unstable.
    * debian/control(.in): build-depends on libgphoto2-dev >= 2.3; this should
      fix general FTBFS (closes: #422384)

 -- Frederic Peters <fpeters@debian.org>  Sat, 05 May 2007 21:35:09 +0200

gphoto2 (2.3.1-1) experimental; urgency=low

  * New upstream release. (closes: #407048)
    * upload to experimental.
